styles/3_components.css
#nprogress .bar {
  height: 65px;
  opacity: .7;
  z-index: 2;
}

/* SHOWREEL */

#showreel
{
  background-color: #000;
  position: relative;
  height: 630px;
  width: 100%;
  overflow: hidden;
  z-index: 10;
  -webkit-box-shadow: rgba(0, 0, 0, 0.15) 0px -20px 70px 40px;
  -moz-box-shadow: rgba(0, 0, 0, 0.15) 0px -20px 70px 40px;
  box-shadow: rgba(0, 0, 0, 0.15) 0px -20px 70px 40px;
}
#showreel-container {
  width: 100%;
  height: 100%;
  -webkit-perspective: 2000;
  -moz-perspective: 2000px;
  perspective: 2000px;
}
#showreel-stage {
  width: 100%;
  height: 100%;
  -webkit-transform-style: preserve-3d;
  -moz-transform-style: preserve-3d;
  transform-style: preserve-3d;
}
#showreel-stage.transition {
  -webkit-transition: -webkit-transform 1s ease-in-out;
  -moz-transition: -moz-transform 1s ease-in-out;
  transition: transform 1s ease-in-out;
}
#showreel-shape {
  margin: 0 auto;
  width: 100%;
  height: 100%;
  position: relative;
  -webkit-transform-style: preserve-3d;
  -moz-transform-style: preserve-3d;
  transform-style: preserve-3d;
}
#showreel-shape.transition {
  -webkit-transition: -webkit-transform 2s ease-in-out;
  -moz-transition: -moz-transform 2s ease-in-out;
  transition: transform 2s ease-in-out;
}
#showreel .item {
  -webkit-transition: opacity 2s ease-in-out;
  -moz-transition: opacity 2s ease-in-out;
  transition: opacity 2s ease-in-out;
  display: block;
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0px;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: left center;
  z-index: 42;
  opacity: 0;
}
#showreel-stage.transition.transitioningBySwipe #showreel-shape.transition,
#showreel-stage.transition.transitioningBySwipe .item {
  -webkit-transition-duration: 0.5s !important;
  -moz-transition-duration: 0.5s !important;
  transition-duration: 0.5s !important;
}
#showreel-stage.transitioningByClick .item,
#showreel-stage.transitioningByDoubleSwipe .item {
  opacity: 1;
}
#showreel .active-item {
  z-index: 43;
  opacity: 1;
}

#showreel .item p {
  opacity: 1;
  position: absolute;
  top: 40px;
  right: 5%;
  width: 50%;
  max-width: 450px;
  z-index: 43;
  color: #FFF;
  font-weight: bold;
  font: 70px bebas-neue, "Helvetica Neue", Helvetica, Arial, sans-serif;
  text-align: right;
  text-shadow: 0px 1px 1px rgba(0,0,0,.6);
  -webkit-font-smoothing: antialiased;
}
#showreel .item p.left {
  left: 5%;
  text-align: left;
}

#showreel .active-item p {
  opacity: 1;
}

#showreel-stage a {
  text-decoration: none;
}

#showreel #indicators {
  opacity: 0;
  position: absolute;
  top: 20px;
  width: 100%;
  text-align: center;
  color: #FFF;
  z-index: 45;

  font-size: 142%;
  letter-spacing: 3px;

  text-shadow: 0 0 3px #000;
  cursor: pointer;
}
#showreel #indicators span {
  opacity: 0.4;
  -webkit-transition-property: opacity;
  -webkit-transition-duration: 0.5s;
  -webkit-transition-delay: 0.2s;
  -moz-transition-property: opacity;
  -moz-transition-duration: 0.5s;
  -moz-transition-delay: 0.2s;
}
#showreel #indicators .active {
  opacity: 1;
}


/* Q42is */
#q42is-header h1 {
  font: 80px bebas-neue, "Helvetica Neue", Helvetica, Arial, sans-serif;
  margin: 0;
}

#q42is-pre {
  display: inline-block;
  color: #000;
}

#q42is {
  height: 1em;
  display: inline-block;
  overflow: hidden;
  position: absolute;
  margin-left: 10px;
  white-space: nowrap;
  max-width: calc(100% - 150px);
}
#q42is span {
  display: block;
  color: #DDD;
  -webkit-transition: -webkit-transform linear .2s;
  -webkit-transform: rotateX(180deg);
}
#q42is span.selected {
  color: #888;
  -webkit-transform: rotateX(0deg);
}

/* NAVIGATION */

nav {
  width: 100%;
  height: 95px;
  font: 2.7em bebas-neue, "Helvetica Neue", Helvetica, Arial, sans-serif;
}
#header nav, #showreel nav {
  z-index: 44;
  position: absolute;
  bottom: 0;
  text-align: center;
}

#header {
  width: 100%; height: 65px;
  position: relative;
  margin: 0 auto 0 auto;
  background-color: rgb(205,255,105);
  box-shadow: rgba(0, 0, 0, 0.15) 0px -20px 70px 40px;
  -webkit-transition: ease-in-out .3s;
  -moz-transition: ease-in-out .3s;
  transition: ease-in-out .3s;
  -webkit-font-smoothing: antialiased;
}
#header-bg-gradient {
  position: absolute;
  top: 0; left: 0;
  width: 100%; height: 100%;
  z-index: 1;
  -webkit-transition: ease-in-out .3s;
  -moz-transition: ease-in-out .3s;
  transition: ease-in-out .3s;
}
#showreel #header-bg-gradient {
  display: none;
}

#header nav {
  -webkit-transition: ease-in-out background .3s;
  -moz-transition: ease-in-out background .3s;
  transition: ease-in-out background .3s;
  background: rgba(0,0,0,.2) -webkit-linear-gradient(top, rgba(0,0,0,.9), rgba(0,0,0,.3));
  background: -moz-linear-gradient(top, rgba(0,0,0,.9), rgba(0,0,0,.3));
}
#header:hover nav {
  background: rgba(0,0,0,0) -webkit-linear-gradient(top, rgba(0,0,0,.9), rgba(0,0,0,.1));
  background: -moz-linear-gradient(top, rgba(0,0,0,.9), rgba(0,0,0,.1));
}

nav,
nav ul,
nav ul li { height: 65px; line-height: 70px; }

nav .pos
{
  position: relative;
  margin: 0 auto;
  width: 940px;
}

nav ul {
  width: 100%;
  margin: 0; padding: 0;
}

nav ul li {
  float: left;
  margin: 0 0 0 40px;
  list-style: none;
  padding: 0;
}

nav ul li.right {
  position: relative;
  float: right;
  margin-left: 20px;
}

#logo {
  margin: 0;
  text-align: left;
}
#logo img {
  height: 53px;
}
#lights-toggle a {
  font-size: 22px;
  display: inline-block;
  vertical-align: middle;
  background: rgba(0,0,0,.7);
  height: 30px;
  line-height: 150%;
  border-radius: 10px;
}
#lights-toggle a:hover {
  text-decoration: none;
  color: #ff9;
  background-color: rgba(255,255,150,.4);
}

nav ul li a,
nav ul li a:visited
{
  color: #FFF;
  text-decoration: none;
  text-shadow: 0 1px 1px rgba(0,0,0,.6);
  -webkit-font-smoothing: antialiased;
}
nav ul li a:hover {
  color: #fff;
  text-decoration: underline;
}

/* VISUAL */

.block-small .figure { float: left; }
/* ... */

